syntax = "proto3";

package proto;

option java_package = "com.novel.im.proto";
option java_outer_classname = "DataProto";

// 请求类型枚举
enum MsgType {
    ACK_MSG = 0; // ACK确认
    HANDSHAKE_MSG=1; // 握手
    SEND_MSG = 2; // 发送消息
    BROADCAST_MSG = 3; // 广播消息
    SYSTEM_MSG =4; // 系统消息
    SYSTEM_BROADCAST_MSG =5; // 系统广播
    PONG_MSG =6; // 心跳
    LEAVE_MSG=7; // 离开
    FILE_MSG=8; // 文件传输
    FILE_SLICES_MSG=9; // 文件切片包
}

enum ResultCode{
    OK = 0; // ok
    CLIENT_FAIL = 1; // 非法请求，不予处理
    SERVER_FAIL = 2; // 处理失败，服务器错误
}

enum SendType{
    SINGLE=0; // 单聊
    GROUP=1; // 群聊
    ONLINE=2; // 上线
    LEAVE=3; // 离线
    ADD_FRIEND=4; // 请求添加好友
    AGREE_FRIEND=5; // 同意添加好友
    REFUSE_FRIEND=6; // 拒绝添加好友
}

enum SystemMsgType{
    MSG=0; // 普通推送消息
    EXIT=1; // 强制下线
}

message MsgReq {
    MsgType msgType = 1;

    oneof Pack {
        // 握手请求
        HandShakeReq handShakeReq = 3;
        // 发送消息请求
        SendMsgReq sendMsgReq = 4;
        // 心跳请求
        PongReq pongReq=6;
        // 离开请求
        LeaveReq leaveReq=7;
        // 文件请求
        FileReq fileReq=8;
        // 文件切片包请求
        FileSlicesReq fileSlicesReq=9;
    }
}

message MsgRsp {
    MsgType msgType = 1;

    oneof Pack {
        // ACK确认
        AckRsp ackRsp = 2;
        // 握手回复
        HandShakeRsp handShakeRsp = 3;
        // 收到消息
        SendMsgRsp sendMsgRsp=4;
        // 广播消息
        BroadcastMsgRsp broadcastMsgRsp = 5;
        // 系统通知
        SystemMsgRsp systemMsgRsp=6;
    }
}

// ack确认
message AckRsp{
    ResultCode code=1; // 响应码
    int64 user_id=2; // 用户ID
    int64 time_stamp=3; // 辨别的时间戳
}

// 握手
message HandShakeReq{
    string token=1; // 令牌
}
// 握手回复
message HandShakeRsp{
    ResultCode code=1; // 响应码
    string aes_key=2; // 加密密钥
}

// 发送消息(有ACK回复)
message SendMsgReq{
    int64 to_id=1;
    int64 form_id=2;
    string content=3;
    int64 time_stamp=4;
    SendType type=5;
}
// 收到消息(有ACK回复)
message SendMsgRsp{
    int64 id=1;
    int64 to_id=2;
    int64 form_id=3;
    string content=4;
    int64 time_stamp=5;
    SendType type=6;
}

// 心跳请求(有ACK回复)
message PongReq{
    int64 user_id=1;
    int64 time=2;
}

message LeaveReq{
    int64 user_id=1;
}

message BroadcastMsgRsp{
    int64 time=1;
    string title=2;
    string content=3;
    SystemMsgType type=4;
}

message SystemMsgRsp{
    int64 user_id=1;
    int64 time_stamp=2;
    string title=3;
    string content=4;
    SystemMsgType type=5;
}

message FileReq{
    int64 size=1; // 文件大小
    int32 count=2; // 包数量
    int64 time_stamp=3;
    string file_name=4;
    string file_type=5;
}

message FileSlicesReq{
    int32 seq=1; // 包序号
    bytes body=2; // 内容
}